--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,6 +11,9 @@ html(lang="en")
         header
             h1 Noom
         main
-            h2 Welcome to Noom
-            button 안녕
+            ul 
+                form
+                    input(type="text", placeholder="write a message" required)
+                    button Send
+
         script(src="/public/js/app.js")  
