--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -20,4 +20,6 @@ html(lang="en")
                     input(type="text", placeholder="write a message" required)
                     button Send
 
+            ul#chatRoom
+
         script(src="/public/js/app.js")  
