--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,19 +7,27 @@ html(lang="en")
         title Noom
         //- 기본 스타일을 멋있게 바꿔준다.
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        link(rel='stylesheet', href='/style.css')
+
     body
         header
             h1 Noom
         main
-            ul 
-                form#nickname
-                    input(type="text", placeholder="write Your Nickname" required)
-                    button Send
-            ul 
+            div#welcome
+                form#roomname
+                    input(type="text", placeholder="write a Room Name", required)
+                    button Enter Room
+            div#room
+                div#chatbox
+                    h1 채팅방
+                    ul#chat
                 form#message
                     input(type="text", placeholder="write a message" required)
                     button Send
-
-            ul#chatRoom
-
-        script(src="/public/js/app.js")  
+                //- form#nickname
+                //-     input(type="text", placeholder="write a message" required)
+                //-     button Set Your NickName
+                
+        //- socketIO를 사용가능하게 해준다.
+        script(src="/socket.io/socket.io.js") 
+        script(src="/public/js/app.js")
