--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,7 +7,6 @@ html(lang="en")
         title Noom
         //- 기본 스타일을 멋있게 바꿔준다.
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-        link(rel='stylesheet', href='/style.css')
 
     body
         header
@@ -18,7 +17,7 @@ html(lang="en")
                     input(type="text", placeholder="write a Room Name", required)
                     button Enter Room
             div#room
-                div#chatbox
+                div#chatbox(style="overflow:hidden;width:100%; height:300px; padding-bottom: 20px;")
                     h1 채팅방
                     ul#chat
                 form#message
