--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -16,6 +16,7 @@ html(lang="en")
                 form#roomname
                     input(type="text", placeholder="write a Room Name", required)
                     button Enter Room
+                ul#roomList
             div#room
                 div#chatbox(style="overflow:hidden;width:100%; height:300px; padding-bottom: 20px;")
                     h1 채팅방
