--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -19,7 +19,7 @@ html(lang="en")
                 ul#roomList
             div#room
                 div#chatbox(style="overflow:hidden;width:100%; height:300px; padding-bottom: 20px;")
-                    h1 채팅방
+                    h1 채팅창
                     ul#chat
                 form#message
                     input(type="text", placeholder="write a message" required)
